--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -8,4 +8,7 @@
   <li>
     <a routerLink="/heroes/listado">Ir a Heroe</a>
   </li>
+  <li>
+    <a routerLink="/heroes/home">Ir a Home</a>
+  </li>
 </ul>
