--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<h1>Hola</h1>
+<mat-sidenav-container>
+  <mat-sidenav>
+    <h1>SideNav</h1>
+  </mat-sidenav>
+
+  <mat-toolbar>
+    <button mat-button>
+      Menu
+    </button>
+  </mat-toolbar>
+
+</mat-sidenav-container>
