--- a/src/app/heroes/pages/heroe/heroe.component.html
+++ b/src/app/heroes/pages/heroe/heroe.component.html
@@ -6,6 +6,13 @@
         <mat-icon>menu</mat-icon>
       </button>
     </mat-toolbar>
+    <mat-nav-list>
+      <a routerLink="./listado"
+        mat-list-item
+        (click)="sidenav.toggle()">
+        <span>Lista Heroes</span>
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-toolbar>
@@ -13,5 +20,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </mat-toolbar>
+
+  <router-outlet></router-outlet>
 
 </mat-sidenav-container>
