--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,23 +1,9 @@
 <h1>Listado de Heroes</h1>
 <mat-divider></mat-divider>
 <br>
-<div mt-5 fxLayout="row wrap" >
-
-  <mat-card mb-3 *ngFor="let heroe of heroes">
-    <mat-card-header>
-        <mat-card-title>{{heroe.superhero}}</mat-card-title>
-        <mat-card-subtitle>{{heroe.alter_ego}}</mat-card-subtitle>
-    </mat-card-header>
-    <img matCardImage src="assets/heroes/{{heroe.id}}.jpg">
-    <mat-card-content>
-        <h3>{{ heroe.publisher }}</h3>
-        <p>
-          <strong>Primer Aparicion</strong>{{ heroe.first_appearance }}
-          <br>
-          <strong>Personajes:</strong>{{ heroe.characters }}
-        </p>
-    </mat-card-content>
-</mat-card>
-
+<div div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center none" fxLayoutGap="20px" >
+  <div fxFlex="20" fxFlex.lg="15" fxFlex.sm="30" *ngFor="let heroess of heroes">
+    <app-heroe-tarjeta-component [heroe]="heroess"></app-heroe-tarjeta-component>
+  </div>
 </div>
 
