Final de proyecti

--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -62,6 +62,15 @@
       Guardar
     </button>
 
+    <div>
+      <button mat-raised-button
+      (click)="eliminar(heroe)"
+      >
+        <mat-icon>remove</mat-icon>
+        Eliminar
+      </button>
+    </div>
+
   </div>
 
   <div fxFlex="50">
