Final de rutas protegidas

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<mat-grid-list cols="1" rowHeight= "200px">
+  <mat-grid-tile>
+    <button
+            (click)="login()"
+            mat-raised-button
+            color="primary"
+    >
+      Ingresar
+    </button>
+  </mat-grid-tile>
+</mat-grid-list>
