--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -1,1 +1,9 @@
-<p>registro works!</p>
+<p>registro works!!!!!!!!!!!!!!</p>
+
+<mat-grid-list cols="1">
+  <mat-grid-tile>
+    <button mat-raised-button color="primary">
+      Ingresar
+    </button>
+  </mat-grid-tile>
+</mat-grid-list>
