--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,11 +1,11 @@
-<p>error-page works!</p>
+<h1>error-page works!</h1>
 
 <ul>
     <li>
         <a routerLink="/auth/login">
             Ir a Login
         </a>
-    </li>    
+    </li>
 
     <li>
         <a routerLink="/auth/registro">
